--- a/misc.html
+++ b/misc.html
@@ -141,6 +141,18 @@
 <li>
 <dl>
      Committee Member in 
+     <!-- <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank"> -->
+     Artifact Evaluation Committee <!--</a>-->
+     for 
+  <a href= "https://etaps.org/2022/esop" target="_blank"> 
+        ESOP 2022</a>
+	
+</dl>
+</li>
+
+<li>
+<dl>
+     Committee Member in 
   <a href= "https://2022.ecoop.org/committee/ecoop-2022-papers-extended-review-committee-" target="_blank"> 
        Extended Review Committee </a>
      for 
