--- a/index.html
+++ b/index.html
@@ -113,7 +113,9 @@ I am advised by
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
 <!-- <em>large</em> graphs using --> 
 <!-- GPUs, aided by approximate computing.-->
-I am a post-doctoral researcher with INRIA's team ROMA at 
+I am a post-doctoral researcher with INRIA's team 
+<a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">ROMA</a> 
+at 
 <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, 
 ENS de Lyon. 
 I obtained my Ph.D. from the 
