parco reviewer recognition

--- a/misc.html
+++ b/misc.html
@@ -187,7 +187,9 @@
 
 <li>
 <dl>
-        Reviewer for 
+  <a href="docs/certificates/Certificate_PARCO_Recognised.pdf" target="_blank">
+          Reviewer</a>
+   for 
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
 	  Parallel Computing</a>
   <span style="float:right;font-weight:normal; font-style:italic">
