--- a/misc.html
+++ b/misc.html
@@ -141,8 +141,8 @@
 <li>
 <dl>
      Committee Member in 
-     <!-- <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank"> -->
-     Artifact Evaluation Committee <!--</a>-->
+     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation" target="_blank">
+     Artifact Evaluation Committee </a>
      for 
   <a href= "https://etaps.org/2022/esop" target="_blank"> 
         ESOP 2022</a>
