--- a/misc.html
+++ b/misc.html
@@ -141,6 +141,18 @@
 <li>
 <dl>
      Committee Member in 
+     <a href= "#" target="_blank">
+     Artifact Evaluation Committee </a>
+     for 
+  <a href= "https://pldi22.sigplan.org/" target="_blank"> 
+        PLDI 2022</a>
+	
+</dl>
+</li>
+
+<li>
+<dl>
+     Committee Member in 
      <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation" target="_blank">
      Artifact Evaluation Committee </a>
      for 
