--- a/misc.html
+++ b/misc.html
@@ -140,108 +140,60 @@
 
 <li>
 <dl>
-     Committee Member in 
-     <a href= "#" target="_blank">
-     Artifact Evaluation Committee </a>
-     for 
-  <a href= "https://pldi22.sigplan.org/" target="_blank"> 
-        PLDI 2022</a>
-	
-</dl>
-</li>
+    Reviewer: 
 
-<li>
-<dl>
-     Committee Member in 
-     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation" target="_blank">
-     Artifact Evaluation Committee </a>
-     for 
-  <a href= "https://etaps.org/2022/esop" target="_blank"> 
-        ESOP 2022</a>
-	
-</dl>
-</li>
-
-<li>
-<dl>
-     Committee Member in 
-  <a href= "https://2022.ecoop.org/committee/ecoop-2022-papers-extended-review-committee-" target="_blank"> 
-       Extended Review Committee </a>
-     for 
-  <a href= "https://2022.ecoop.org/" target="_blank"> 
-        ECOOP 2022</a>
-	
-</dl>
-</li>
-
-<li>
-<dl>
-     Committee Member in 
-  <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank"> 
-       Artifact Evaluation Committee </a>
-     for 
-  <a href= "https://2022.ecoop.org/" target="_blank"> 
-        ECOOP 2022</a>
-	
-</dl>
-</li>
-
-<li>
-<dl>
-        Reviewer for 
   <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank"> 
-	  IEEE Transactions on Parallel and Distributed Systems</a>
-  <span style="float:right;font-weight:normal; font-style:italic">
-    2021
-  </span>
-</dl>
-</li>
+	  IEEE Transactions on Parallel and Distributed Systems</a> (2021),
 
-<li>
-<dl>
-  <a href="docs/certificates/Certificate_PARCO_Recognised.pdf" target="_blank">
-          Reviewer</a>
-   for 
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
-	  Parallel Computing</a>
-  <span style="float:right;font-weight:normal; font-style:italic">
-    2021
-  </span>
-</dl>
-</li>
+	  Parallel Computing</a> (2021),
 
-<li>
-<dl>
-        Reviewer for 
   <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
-	  Concurrency and Computation: Practice and Experience</a>
-  <span style="float:right;font-weight:normal; font-style:italic">
-    2021
-  </span>
+	  Concurrency and Computation: Practice and Experience</a> (2021),
+
+  <em>INAE Letters</em> (2018),
+
+  <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank"> 
+	 IEEE Embedded Systems Letters</a> (2017).
+	
+</dl>
+</li>
+
+
+<li>
+<dl>
+    Extended Review Committee: 
+
+  <a href= "https://2022.ecoop.org/committee/ecoop-2022-papers-extended-review-committee-" target="_blank"> 
+       ECOOP 2022</a>.
+	
 </dl>
 </li>
 
 <li>
 <dl>
-     Committee Member in 
+    Artifact Evaluation Committee: 
+
+  <a href= "https://pldi22.sigplan.org/" target="_blank"> 
+        PLDI 2022</a>,
+
+     <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation" target="_blank"> 
+        ESOP 2022</a>,
+
+  <a href= "https://2022.ecoop.org/committee/ecoop-2022-artifacts-artifact-evaluation-committee" target="_blank"> 
+        ECOOP 2022</a>,
+	
   <a href= "https://2021.ecoop.org/committee/ecoop-2021-ecoop-artifacts-artifact-evaluation-committee" target="_blank"> 
-       Artifact Evaluation Committee </a>
-     for 
-  <a href= "https://2021.ecoop.org/" target="_blank"> 
-        ECOOP 2021</a>
-	
-</dl>
-</li>
+        ECOOP 2021</a>,
 
-<li>
-<dl>
-     Committee Member in 
   <a href= "https://ppopp21.sigplan.org/committee/PPoPP-2021-artifact-evaluation-committee" target="_blank"> 
-       Artifact Evaluation Committee </a>
-     for 
-  <a href= "https://ppopp21.sigplan.org/" target="_blank"> 
-        PPoPP 2021</a>
-	
+        PPoPP 2021</a>,
+
+  <a href= "https://2020.ecoop.org/committee/ecoop-2020-artifacts-artifact-evaluation-committee" target="_blank"> 
+        ECOOP 2020</a>,
+
+  <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank"> 
+        PPoPP 2018</a>.
 </dl>
 </li>
 
@@ -257,41 +209,6 @@
 	
 </dl>
 </li>
-
-<li>
-<dl>
-     Committee Member in 
-  <a href= "https://2020.ecoop.org/committee/ecoop-2020-artifacts-artifact-evaluation-committee" target="_blank"> 
-       Artifact Evaluation Committee </a>
-     for 
-  <a href= "https://2020.ecoop.org/" target="_blank"> 
-        ECOOP 2020</a>
-	
-</dl>
-</li>
-
-
-<li>
-<dl>
-     Committee Member in 
-  <a href= "https://ppopp18.sigplan.org/committee/ppopp-2018-artifact-evaluation-committee" target="_blank"> 
-       Artifact Evaluation Committee </a>
-     for 
-  <a href= "https://ppopp18.sigplan.org/" target="_blank"> 
-        PPoPP 2018</a>
-	
-</dl>
-</li>
-
-<li>
-<dl>
-        Reviewer for <em>INAE Letters</em> 
-  <span style="float:right;font-weight:normal; font-style:italic">
-    2018
-  </span>
-</dl>
-</li>
-	
 
 <li>
 <dl>
