--- a/index.html
+++ b/index.html
@@ -169,10 +169,12 @@ My research interests span the areas of high-performance computing, parallel com
 <span style="float:right">
     <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
 
+        <!--
      <img
           src="img/btn_linkedin_160x25.png"
           border="0" alt="View Somesh Singh's profile on LinkedIn">
-
+       -->
+       <i class="fab fa-linkedin"></i>
     </a>
 </span>
 
@@ -224,6 +226,10 @@ My research interests span the areas of high-performance computing, parallel com
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Font Awesome -->
+   <script src="https://use.fontawesome.com/52f51980bb.js"></script>
+
 
 </body>
 
