--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ My research interests span the areas of high-performance computing, parallel com
     <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
 
      <img
-          src="img/linkedin-icon.png"
+          src="img/btn_linkedin_160x25.png"
           border="0" alt="View Somesh Singh's profile on LinkedIn">
 
     </a>
