--- a/misc.html
+++ b/misc.html
@@ -100,6 +100,17 @@
 
 <li>
 <dl>
+  Selected for 
+  <a href="docs/certificates/Certificate_HLF_SinghSomesh.pdf" target="_blank">
+      attending</a>
+  <a href= "https://www.heidelberg-laureate-forum.org/" target="_blank">
+      Heidelberg Laureate Forum</a>.
+       <span style="float:right; font-weight:normal; font-style: italic;"> September 2020 </span>
+</dl>
+</li>
+
+<li>
+<dl>
   Awarded <em>ACM SIGPLAN PAC</em> grant for attending 
   <a href= "https://ppopp19.sigplan.org/" target="_blank">PPoPP 2019</a>.
 </dl>
