--- a/misc.html
+++ b/misc.html
@@ -100,9 +100,9 @@
 
 <li>
 <dl>
-  Selected for 
   <a href="docs/certificates/Certificate_HLF_SinghSomesh.pdf" target="_blank">
-      attending</a>
+  Selected</a>
+  for attending the
   <a href= "https://www.heidelberg-laureate-forum.org/" target="_blank">
       Heidelberg Laureate Forum</a>.
        <span style="float:right; font-weight:normal; font-style: italic;"> September 2020 </span>
