--- a/misc.html
+++ b/misc.html
@@ -189,7 +189,7 @@
 <dl>
     Artifact Evaluation Committee: 
 
-  <a href= "https://pldi22.sigplan.org/" target="_blank"> 
+  <a href= "https://pldi22.sigplan.org/committee/pldi-2022-PLDI-Research-Artifacts-artifact-evaluation-committee" target="_blank"> 
         PLDI 2022</a>,
 
      <a href= "https://etaps.org/user-profile/archive/53-etaps-2022/491-esop-2022-artifact-evaluation" target="_blank"> 
