--- a/misc.html
+++ b/misc.html
@@ -246,6 +246,21 @@
 <li>
 <dl>
 [Virtual] 
+  <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=119071" target="_blank"> 
+       Talk</a>
+ at 
+  <a href= "https://www.siam.org/conferences/cm/conference/pp22" target="_blank"> 
+       SIAM PP'22</a>.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    February 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+[Virtual] 
   <a href= "https://www.ics.forth.gr/lecture/15243" target="_blank"> 
        Talk</a>
  at 
