--- a/misc.html
+++ b/misc.html
@@ -220,7 +220,7 @@
        SPLASH</a>
      /
   <a href= "https://2020.ecoop.org/" target="_blank"> 
-       ECOOP 2020</a>
+       ECOOP 2020</a>.
 	
 </dl>
 </li>
