--- a/research.html
+++ b/research.html
@@ -212,7 +212,7 @@ The tag-cloud provides an accurate representation of my Ph.D. research focus.
 <h3 style="font-size: 16pt">
 An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs
 </h3>
-<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&ccedil;ar,</i></h4>
+<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
 <h4 style="font-size: 13pt">in GrAPL: Workshop on Graphs, Architectures, Programming, and Learning (IPDPSW), 2022 [<i>to appear</i>]. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#grapl22" aria-expanded="false" aria-controls="grapl22">
