--- a/research.html
+++ b/research.html
@@ -219,7 +219,7 @@ An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs
    (abstract) 
   </a>
 
-  <a href="https://hal.inria.fr/hal-03612360/document" target="_blank">(HAL)</a>
+  <a href="https://hal.inria.fr/hal-03612360/document" target="_blank">(pdf)</a>
   <a href="#">(doi)</a>
 </p>
 
