--- a/misc.html
+++ b/misc.html
@@ -245,6 +245,20 @@
 
 <li>
 <dl>
+       Talk
+  at
+  <a href="http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank">ROMA Working Groups</a>,
+<a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">Team ROMA</a> 
+<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    March 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
 [Virtual] 
   <a href= "https://meetings.siam.org/sess/dsp_talk.cfm?p=119071" target="_blank"> 
        Talk</a>
