--- a/misc.html
+++ b/misc.html
@@ -247,8 +247,8 @@
 <dl>
        Talk
   at
-  <a href="http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank">ROMA Working Groups</a>,
-<a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">Team ROMA</a> 
+  <a href="http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank">ROMA Working Groups</a>
+(<a href="http://www.ens-lyon.fr/LIP/ROMA/" target="_blank">Team ROMA</a>),
 <a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>.
 
   <span style="float:right;font-weight:normal; font-style:italic">
