reviewer section updated

--- a/misc.html
+++ b/misc.html
@@ -157,14 +157,14 @@
 	  IEEE Transactions on Parallel and Distributed Systems</a> (2021),
 
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
-	  Parallel Computing</a> (2021)
+	  Parallel Computing</a> (2021-22)
   [
   <a href="docs/certificates/Certificate_PARCO_Recognised.pdf" target="_blank">
           certificate</a>
   ],
 
   <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
-	  Concurrency and Computation: Practice and Experience</a> (2021),
+	  Concurrency and Computation: Practice and Experience</a> (2021-22),
 
   <em>INAE Letters</em> (2018),
 
