inae reviewer assignment

--- a/misc.html
+++ b/misc.html
@@ -169,6 +169,9 @@
   <a href="docs/certificates/CPE_Reviewer_Certificate_2021.pdf" target="_blank">
           certificate</a>
   ],
+  
+  <a href= "https://www.springer.com/journal/41403" target="_blank"> 
+	 Transactions of the Indian National Academy of Engineering</a> (2022),
 
   <em>INAE Letters</em> (2018),
 
