--- a/misc.html
+++ b/misc.html
@@ -196,6 +196,9 @@
 <dl>
     Artifact Evaluation Committee: 
 
+  <a href= "https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee" target="_blank"> 
+        ISSTA 2022</a>,
+
   <a href= "https://pldi22.sigplan.org/committee/pldi-2022-PLDI-Research-Artifacts-artifact-evaluation-committee" target="_blank"> 
         PLDI 2022</a>,
 
