--- a/research.html
+++ b/research.html
@@ -196,20 +196,11 @@ The tag-cloud provides an accurate representation of my Ph.D. research focus.
 <h3><u>Publications</u>
  <span style="float:right; font-size:18px;">
  <button type="button" class="btn btn-primary btn-sm" style="font-size:15px;">
-     <img
-          src="img/dblp_logo.png"
-          border="0" alt="DBLP">
-  
-     <!-- <a href="https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank" style="color:inherit">DBLP</a> -->
+ <a href="https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank" style="color:inherit">DBLP</a>
  </button>
  
  <button type="button" class="btn btn-primary btn-sm " style="font-size:15px;">
-     <a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank">
-     <img
-          src="img/google_scholar_logo.png"
-          border="0" alt="Google Scholar">
-     </a>
-     <!--<a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank" style="color:inherit">Google Scholar</a> -->
+ <a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank" style="color:inherit">Google Scholar</a>
  </button>
 
  </span>
