--- a/phddissertation.html
+++ b/phddissertation.html
@@ -86,10 +86,10 @@
 </br>
 
 <p>
-<h2>
-  Scalable and Performant Graph Processing on GPU using Approximate Computing
-</h2>
-<\p>
+<h4>
+    <b>Scalable and Performant Graph Processing on GPU using Approximate Computing</b>
+</h4>
+</p>
 
 <blockquote class="blockquote" style="background:#eff">
       <p>
@@ -114,7 +114,7 @@ I work on designing approximation techniques for parallel graph algorithms on GP
 </p> -->
 
 <p>
-<h3> Abstract: </h3>
+<h4> Abstract: </h4>
 <!-- Scaling graph analytics is challenging. -->
 My dissertation research focused on accelerating parallel graph processing using approximate computing. I designed techniques for improving the efficiency of graph analytics on Graphics Processing Units (GPUs) by trading-off computational accuracy.
 When the graph sizes are huge (e.g., billion-scale networks), or the underlying processing is expensive, it is not always feasible to compute the exact solution in time. A practical question to ask in such scenarios is: "given an infrastructure, how to make the best use of resources to obtain an acceptable, inexact solution in a reasonable time?"
