--- a/phddissertation.html
+++ b/phddissertation.html
@@ -85,11 +85,10 @@
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Ph.D. Dissertation </h3>
 </br>
 
-<p>
 <h3>
     <b>Scalable and Performant Graph Processing on GPU using Approximate Computing</b>
 </h3>
-</p>
+</br>
 
 <blockquote class="blockquote" style="background:#eff">
       <p>
@@ -167,9 +166,11 @@ enhance the execution performance further.
 
 We illustrate the efficacy of the proposed techniques on graphs of varying characteristics and sizes and popular graph algorithms through extensive experimental evaluation. Overall, we show that approximate computation of graph algorithms is a robust
 way of dealing with irregularities. Approximate computing combined with parallelization promises to make heavy-weight graph computation practical, as well as, scalable.
-
-
+</br>
+[<a href="docs/thesis/thesis.pdf" target="_blank">Download thesis</a>]
 </p>
+
+
 <!-- [<a href="docs/thesis/phd_defense_slides.pdf" target="_blank">PhD defense slides</a>] -->
 
 <p>
