--- a/research.html
+++ b/research.html
@@ -92,103 +92,14 @@
         </div>
 -->
             <div class="col-lg-12">
-<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Dissertation Research </h3>
-</br>
-<blockquote class="blockquote" style="background:#eff">
-      <p>
-	<i> &#34;Although this may seem a paradox, all exact
-	science is dominated by the idea of approximation.&#34; </i>
-      </p>
-	<footer>Bertrand Russell</footer>
-</blockquote>
-<blockquote class="blockquote" style="background:#eff">
-      <p>
-  <i> &#34;It is the mark of an instructed mind to rest assured with that
-degree of precision that the nature of the subject admits, and
-not to seek exactness when only an approximation of the
-truth is possible. &#34; </i>
-      </p>
-  <footer>Aristotle</footer>
-</blockquote>
-
-
-<!-- <p>
-I work on designing approximation techniques for parallel graph algorithms on GPU to improve performance.
-</p> -->
-
-<p>
-<!-- Scaling graph analytics is challenging. -->
-My dissertation research focused on accelerating parallel graph processing using approximate computing. I designed techniques for improving the efficiency of graph analytics on Graphics Processing Units (GPUs) by trading-off computational accuracy.
-When the graph sizes are huge (e.g., billion-scale networks), or the underlying processing is expensive, it is not always feasible to compute the exact solution in time. A practical question to ask in such scenarios is: "given an infrastructure, how to make the best use of resources to obtain an acceptable, inexact solution in a reasonable time?"
-I sought to answer this question by bringing parallelism and approximate computing into a convergent trajectory to make heavy-weight graph computation practical and scalable.
-[<a href="docs/thesis/thesis.pdf" target="_blank">PhD thesis</a>]
-</p>
-<!-- [<a href="docs/thesis/phd_defense_slides.pdf" target="_blank">PhD defense slides</a>] -->
-
-<p>
-The tag-cloud provides an accurate representation of my Ph.D. research focus.
-</p>
-
-     <p style="text-align:center; "><img style="max-width: 40%; margin-top: 1rem;" src="./img/tag_cloud_phd.png" alt="dissertation_tag_cloud" border="1" /></p>
-
-
-<hr />
-
-<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Other Projects </h3>
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Research </h3>
 </br>
 
-<div style="font-size:18px;">
-<ul>
+My research interests span the broad areas of high-performance computing and parallel computing, with an emphasis on making the processing of irregular workloads on parallel platforms performant, and bridging the gap between programmability and efficiency on such platforms.
 
-<li>
-<dl>
-  Awarded 
-  <a href= "https://edu.google.com/programs/?modal_active=none" target="_blank"> 
-     <em>Google Cloud Platform </em></a>
-  research credits.
-  <span style="float:right;font-weight:normal; font-style:italic">
-    2020
-  </span>
-</dl>
-</li>
+Currently, my focus is on optimizing sparse tensor computations.
 
-<li>
- <dl>
-      Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.com/archive/2018/projects/5152248673861632/" target="_blank"> 
-      <em>Optimize and Integrate Standalone Tracking Library (SixTrackLib)
- </em></a>
- <span style="float:right;font-weight:normal; font-style:italic">
- <a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"><em>SixTrack, CERN-HSF</em> </a>
- </span>
- <p style="font-size:16px; display:list-item; list-style-type: circle; list-style-position:inside;">  <!-- color:#00A598"-->
- Developed a standalone parallel implementation of (a part of) SixTrackLib.
- The contributed code is available
- <a href="https://github.com/ssomesh/sixtracklib_gsoc18/tree/master/" target="_blank"> 
-     here</a>.
- </p>
- </dl>
- </li> 
-
-
-	
-<li>
-<dl>
-        Google Summer of Code 2017 : <a href= "https://summerofcode.withgoogle.com/archive/2017/projects/6549039684255744/" target="_blank"> 
-        <em>Smart Data Structures in CUDA</em> </a>
-<span style="float:right;font-weight:normal; font-style:italic">
-<a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"> 
-       <em>CMS, CERN-HSF</em> </a>
-</span>
-<p style="font-size:16px; display:list-item; list-style-type: circle; list-style-position:inside;">
- Developed 
-<a href= "https://github.com/ssomesh/SALLOC/tree/master" target="_blank"> 
-        <em>SALLOC</em> </a>
--- An arena based memory allocator for SIMT architectures. 
- </p>
-</dl>
-</li>
-
-</div>
+The focus of my Ph.D. research work was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html" target="_blank">here</a>
 
 <hr />
 
@@ -387,6 +298,65 @@ tolerating a little approximation in the computation. We study the effects of fo
 five graphs and show that if an application allows for small inaccuracy, this can be leveraged to achieve considerable performance
 benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
 </p>
+
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Other Projects </h3>
+</br>
+
+<div style="font-size:18px;">
+<ul>
+
+<li>
+<dl>
+  Awarded 
+  <a href= "https://edu.google.com/programs/?modal_active=none" target="_blank"> 
+     <em>Google Cloud Platform </em></a>
+  research credits.
+  <span style="float:right;font-weight:normal; font-style:italic">
+    2020
+  </span>
+</dl>
+</li>
+
+<li>
+ <dl>
+      Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.com/archive/2018/projects/5152248673861632/" target="_blank"> 
+      <em>Optimize and Integrate Standalone Tracking Library (SixTrackLib)
+ </em></a>
+ <span style="float:right;font-weight:normal; font-style:italic">
+ <a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"><em>SixTrack, CERN-HSF</em> </a>
+ </span>
+ <p style="font-size:16px; display:list-item; list-style-type: circle; list-style-position:inside;">  <!-- color:#00A598"-->
+ Developed a standalone parallel implementation of (a part of) SixTrackLib.
+ The contributed code is available
+ <a href="https://github.com/ssomesh/sixtracklib_gsoc18/tree/master/" target="_blank"> 
+     here</a>.
+ </p>
+ </dl>
+ </li> 
+
+
+	
+<li>
+<dl>
+        Google Summer of Code 2017 : <a href= "https://summerofcode.withgoogle.com/archive/2017/projects/6549039684255744/" target="_blank"> 
+        <em>Smart Data Structures in CUDA</em> </a>
+<span style="float:right;font-weight:normal; font-style:italic">
+<a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"> 
+       <em>CMS, CERN-HSF</em> </a>
+</span>
+<p style="font-size:16px; display:list-item; list-style-type: circle; list-style-position:inside;">
+ Developed 
+<a href= "https://github.com/ssomesh/SALLOC/tree/master" target="_blank"> 
+        <em>SALLOC</em> </a>
+-- An arena based memory allocator for SIMT architectures. 
+ </p>
+</dl>
+</li>
+
+</div>
+
+<hr />
+
 
 
         </div>
