--- a/research.html
+++ b/research.html
@@ -95,11 +95,13 @@
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Research </h3>
 </br>
 
+<p>
 My research interests span the broad areas of high-performance computing and parallel computing, with an emphasis on making the processing of irregular workloads on parallel platforms performant, and bridging the gap between programmability and efficiency on such platforms.
 
 Currently, my focus is on optimizing sparse tensor computations.
 
-The focus of my Ph.D. research work was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html" target="_blank">here</a>
+The focus of my Ph.D. research work was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html">here</a>.
+</p>
 
 <hr />
 
@@ -298,6 +300,8 @@ tolerating a little approximation in the computation. We study the effects of fo
 five graphs and show that if an application allows for small inaccuracy, this can be leveraged to achieve considerable performance
 benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
 </p>
+
+<hr />
 
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Other Projects </h3>
 </br>
