--- a/phddissertation.html
+++ b/phddissertation.html
@@ -112,9 +112,8 @@ truth is possible. &#34; </i>
 I work on designing approximation techniques for parallel graph algorithms on GPU to improve performance.
 </p> -->
 
-<p>
 <h4> <b>Abstract</b> </h4>
-</p>
+
 <!-- Scaling graph analytics is challenging. -->
 <!-- 
 My dissertation research focused on accelerating parallel graph processing using approximate computing. I designed techniques for improving the efficiency of graph analytics on Graphics Processing Units (GPUs) by trading-off computational accuracy.
@@ -123,7 +122,7 @@ I sought to answer this question by bringing parallelism and approximate computi
 [<a href="docs/thesis/thesis.pdf" target="_blank">PhD thesis</a>]
 -->
 
-<p>
+<p style="font-size:16px;">
 A multitude of real-world problems is modeled as graphs where nodes represent entities
 of interest, and edges capture the relationships among them. In recent years, Graphics
 Processing Units (GPUs) have gained popularity as accelerators for compute-intensive
