--- a/phddissertation.html
+++ b/phddissertation.html
@@ -111,7 +111,7 @@ truth is possible. &#34; </i>
 I work on designing approximation techniques for parallel graph algorithms on GPU to improve performance.
 </p> -->
 
-<h4> <b>Abstract</b> </h4>
+<h4 style="font-size:18px;"> <b>Abstract</b> </h4>
 
 <!-- Scaling graph analytics is challenging. -->
 <!-- 
