--- a/research.html
+++ b/research.html
@@ -95,11 +95,12 @@
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Research </h3>
 
 <p>
-My research interests span the broad areas of high-performance computing and parallel computing, with an emphasis on making the processing of irregular workloads on parallel platforms performant, and bridging the gap between programmability and efficiency on such platforms.
+My research interests span the broad areas of high-performance computing and parallel computing, with an emphasis on making the processing of irregular workloads on parallel platforms performant.
 
-Currently, my focus is on optimizing sparse tensor computations.
 
 The focus of my Ph.D. research work was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html">here</a>.
+
+Currently, my focus is on optimizing parallel sparse tensor computations.
 </p>
 
 <hr />
