--- a/research.html
+++ b/research.html
@@ -95,12 +95,12 @@
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Research </h3>
 
 <p>
-My research interests span the broad areas of high-performance computing and parallel computing, with an emphasis on making the processing of irregular workloads on parallel platforms performant.
+My research interests span the broad areas of high-performance computing and parallel computing, with an emphasis on making the processing of irregular-workloads on parallel platforms more efficient.
 
 
-The focus of my Ph.D. research work was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html">here</a>.
+The focus of my Ph.D. research was on accelerating parallel graph processing using approximate computing. Details about my Ph.D. dissertation can be found <a href="phddissertation.html">here</a>.
 
-Currently, my focus is on optimizing parallel sparse tensor computations.
+Currently, my focus is on optimizing and enhancing the performance of sparse tensor computations on parallel architectures.
 </p>
 
 <hr />
