--- a/misc.html
+++ b/misc.html
@@ -171,7 +171,7 @@
   ],
   
   <a href= "https://www.springer.com/journal/41403" target="_blank"> 
-      Transactions of the Indian National Academy of Engineering</a> (previously <em>INAE Letters</em>) (2022, 2018),
+      Transactions of the Indian National Academy of Engineering</a> (2022, 2018),
 
   <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank"> 
 	 IEEE Embedded Systems Letters</a> (2017).
