--- a/research.html
+++ b/research.html
@@ -131,7 +131,8 @@ An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs
    (abstract) 
   </a>
 
-  <a href="https://hal.inria.fr/hal-03612360/document" target="_blank">(pdf)</a>
+  <a href="docs/papers/grapl22.pdf" target="_blank">(pdf)</a>
+  <a href="https://hal.inria.fr/hal-03612360" target="_blank">(HAL)</a>
   <a href="#">(doi)</a>
 </p>
 
