adding email address

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ Indian Institute of Technology Madras</a> under the supervision of
 	  Dept. of CSE<br/>
 	  IIT Madras - 600 036.<br/> -->
     Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com<br/>
+           {firstname} (dot) {lastname} (at) ens-lyon (dot) fr
 	</p>
 <!--    <p>
 	   <b>I am currently on the job market.</b> (expected graduation: July 2020) 
