--- a/misc.html
+++ b/misc.html
@@ -253,6 +253,20 @@
 
 <li>
 <dl>
+  <a href= "https://scheduling2022.sciencesconf.org/program" target="_blank"> 
+       Talk</a>
+ at
+<a href="https://scheduling2022.sciencesconf.org/" target="_blank"> 	
+15th Scheduling for Large Scale Systems Workshop</a>, Fr&eac;jus, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    June 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
   <a href= "http://www.ens-lyon.fr/LIP/ROMA/workinggroup.php" target="_blank"> 
        Talk</a>
  at
