--- a/misc.html
+++ b/misc.html
@@ -257,7 +257,7 @@
        Talk</a>
  at
 <a href="https://scheduling2022.sciencesconf.org/" target="_blank"> 	
-15th Scheduling for Large Scale Systems Workshop</a>, Fr&eac;jus, France.
+15th Scheduling for Large Scale Systems Workshop</a>, Fr&#233;jus, France.
 
   <span style="float:right;font-weight:normal; font-style:italic">
     June 2022
