--- a/research.html
+++ b/research.html
@@ -125,7 +125,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse ten
 An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
-<h4 style="font-size: 13pt">in GrAPL: Workshop on Graphs, Architectures, Programming, and Learning (IPDPSW), 2022.  [<i>to appear</i>]</h4>
+<h4 style="font-size: 13pt">in GrAPL: Workshop on Graphs, Architectures, Programming, and Learning (IPDPSW), 2022. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#grapl22" aria-expanded="false" aria-controls="grapl22">
    (abstract) 
