--- a/misc.html
+++ b/misc.html
@@ -253,6 +253,20 @@
 
 <li>
 <dl>
+  <a href= "https://sparsedays.cerfacs.fr/en/program-2/" target="_blank"> 
+       Talk</a>
+ at
+<a href="https://sparsedays.cerfacs.fr/en/" target="_blank"> 	
+Sparse Days 2022</a>, Saint-Girons, France.
+
+  <span style="float:right;font-weight:normal; font-style:italic">
+    June 2022
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
   <a href= "https://scheduling2022.sciencesconf.org/program" target="_blank"> 
        Talk</a>
  at
