--- a/research.html
+++ b/research.html
@@ -132,7 +132,7 @@ An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs
   </a>
 
   <a href="docs/papers/grapl22.pdf" target="_blank">(pdf)</a>
-  <a href="https://hal.inria.fr/hal-03612360" target="_blank">(HAL)</a>
+  <a href="https://hal.inria.fr/hal-03612360" target="_blank">(preprint)</a>
   <a href="#">(doi)</a>
 </p>
 
