--- a/index.html
+++ b/index.html
@@ -148,15 +148,11 @@ Indian Institute of Technology Madras</a> under the supervision of
 <ul>
 
 <li>
-<dl>
-    {firstname} (dot) {lastname}1992 (at) gmail (dot) com<br/>
-</dl>
+    {firstname} (dot) {lastname}1992 (at) gmail (dot) com
 </li>
-    
+   <br/> 
 <li>
-<dl>
    {firstname} (dot) {lastname} (at) ens-lyon (dot) fr
-</dl>
 </li>
 
 </ul>
