adding doi of grapl 22

--- a/research.html
+++ b/research.html
@@ -133,7 +133,7 @@ An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs
 
   <a href="docs/papers/grapl22.pdf" target="_blank">(pdf)</a>
   <a href="https://hal.inria.fr/hal-03612360" target="_blank">(preprint)</a>
-  <a href="#">(doi)</a>
+  <a href="https://doi.org/10.1109/IPDPSW55747.2022.00056" target="_blank">(doi)</a>
 </p>
 
 <p class="collapse" id="grapl22" style="font-size: 11pt">
