--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </ul>
  -->
         <p>
-	Welcome! 
+	Hello! 
 <!-- I am a Ph.D. student in the department of 
 <a href="http://www.cse.iitm.ac.in/" target="_blank">
 Computer Science and Engineering 
