--- a/misc.html
+++ b/misc.html
@@ -220,6 +220,15 @@
 </dl>
 </li>
 
+<li>
+<dl>
+    Subreviewer: 
+
+  <a href= "https://hipc.org/" target="_blank"> 
+       HiPC 2022</a>.
+	
+</dl>
+</li>
 
 <li>
 <dl>
