--- a/research.html
+++ b/research.html
@@ -122,6 +122,32 @@ Currently, my focus is on optimizing and enhancing the performance of sparse ten
 </p>
 
 <h3 style="font-size: 16pt">
+Algorithms and data structures for hyperedge queries
+</h3>
+<h4 style="font-size: 13pt"><i>Jules Bertrand,&#32;Fanny Dufoss&eacute;,&#32;Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
+<h4 style="font-size: 13pt">in ACM JEA. </h4> (Accepted)
+<p style="font-size: 11pt">
+  <a data-toggle="collapse" href="#jea22" aria-expanded="false" aria-controls="jea22">
+   (abstract) 
+  </a>
+
+  <a href="#" target="_blank">(pdf)</a>
+  <a href="https://hal.inria.fr/hal-03127673" target="_blank">(preprint)</a>
+  <a href="#" target="_blank">(doi)</a>
+</p>
+
+<p class="collapse" id="jea22" style="font-size: 11pt">
+We consider the problem of querying the existence of hyperedges in hypergraphs. More formally,
+given a hypergraph, we need to answer queries of the form "does the following set of vertices form
+a hyperedge in the given hypergraph?". Our aim is to set up data structures based on hashing
+to answer these queries as fast as possible. We propose an adaptation of a well-known perfect
+hashing approach for the problem at hand. We analyze the space and run time complexity of
+the proposed approach, and experimentally compare it with the state-of-the-art hashing-based
+solutions. Experiments demonstrate the efficiency of the proposed approach with respect to the
+state-of-the-art.
+</p>
+
+<h3 style="font-size: 16pt">
 An Efficient Parallel Implementation of a Perfect Hashing Method for Hypergraphs
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
