--- a/research.html
+++ b/research.html
@@ -125,7 +125,7 @@ Currently, my focus is on optimizing and enhancing the performance of sparse ten
 Algorithms and data structures for hyperedge queries
 </h3>
 <h4 style="font-size: 13pt"><i>Jules Bertrand,&#32;Fanny Dufoss&eacute;,&#32;Somesh Singh,&#32;Bora U&#231;ar,</i></h4>
-<h4 style="font-size: 13pt">in ACM JEA. </h4> (Accepted)
+<h4 style="font-size: 13pt">in ACM JEA. (Accepted) </h4> 
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#jea22" aria-expanded="false" aria-controls="jea22">
    (abstract) 
