--- a/research.html
+++ b/research.html
@@ -135,7 +135,7 @@ Algorithms and data structures for hyperedge queries*
 
   <a href="#">(pdf)</a>
   <a href="https://hal.inria.fr/hal-03127673" target="_blank">(preprint)</a>
-  <a href="#">(doi)</a>
+  <a href="https://dl.acm.org/doi/10.1145/3568421" target="_blank">(doi)</a>
 </p>
 
 <p class="collapse" id="jea22" style="font-size: 11pt">
