--- a/misc.html
+++ b/misc.html
@@ -204,6 +204,9 @@
 <dl>
     Artifact Evaluation Committee: 
 
+  <a href= "https://2023.ecoop.org/committee/ecoop-2023-artifact-evaluation-artifact-evaluation-committee" target="_blank"> 
+        ECOOP 2023</a>,
+
   <a href= "https://conf.researchr.org/committee/issta-2022/issta-2022-artifact-evaluation-artifact-evaluation-committee" target="_blank"> 
         ISSTA 2022</a>,
 
