service: TACO reviewer

--- a/misc.html
+++ b/misc.html
@@ -156,6 +156,9 @@
   <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank"> 
 	  IEEE Transactions on Parallel and Distributed Systems</a> (2021),
 
+  <a href= "https://dl.acm.org/journal/taco" target="_blank"> 
+	  ACM Transactions on Architecture and Code Optimization</a> (2022),
+
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
 	  Parallel Computing</a> (2021-22)
   [
