--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ Indian Institute of Technology Madras</a> under the supervision of
     <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
 
      <img
-          src="img/btn_linkedin_160x25.png"
+          src="img/linkedin_2000px.svg.png"
           border="0" alt="View Somesh Singh's profile on LinkedIn">
 
     </a>
