--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Indian Institute of Technology Madras</a> under the supervision of
 
      <img
           src="img/linkedin_2000px.svg.png"
-          border="0" alt="View Somesh Singh's profile on LinkedIn">
+          border="0" alt="View Somesh Singh's profile on LinkedIn" width="69.0625" height="69.0625">
 
     </a>
 </span>
