--- a/index.html
+++ b/index.html
@@ -169,24 +169,23 @@ Indian Institute of Technology Madras</a> under the supervision of
 <hr />
 
 <div>
-<span style="float:left">
+
+<span style="float:right">
+
     <a href="https://github.com/ssomesh/" target="_blank">
 
      <img 
           src="img/GitHub-Mark-32px.png"
-          width="32" border="0" alt="View Somesh Singh's GitHub Repository">
-     <img 
-          src="img/GitHub-Logo.png"
-          width="80" border="0" alt="View Somesh Singh's GitHub Repository">
+          alt="View Somesh Singh's GitHub Repository" width="32" height="32" style="padding: 5px;" border="0">
 
     </a>
-</span>
-<span style="float:right">
+
     <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
 
      <img
           src="img/linkedin_2000px.svg.png"
-          border="0" alt="View Somesh Singh's profile on LinkedIn" width="32" height="32">
+          border="0" alt="View Somesh Singh's profile on LinkedIn" width="32" height="32" style="padding: 5px;" border="0">
+
 
     </a>
 </span>
