--- a/index.html
+++ b/index.html
@@ -173,20 +173,27 @@ Indian Institute of Technology Madras</a> under the supervision of
 <span style="float:right">
 
     <a href="https://github.com/ssomesh/" target="_blank">
-
      <img 
           src="img/GitHub-Mark-32px.png"
           alt="View Somesh Singh's GitHub Repository" width="32" height="32" style="padding: 5px;" border="0">
-
     </a>
 
     <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
-
      <img
           src="img/linkedin_2000px.svg.png"
-          border="0" alt="View Somesh Singh's profile on LinkedIn" width="32" height="32" style="padding: 5px;" border="0">
+          alt="View Somesh Singh's profile on LinkedIn" width="32" height="32" style="padding: 5px;" border="0">
+    </a>
 
+    <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
+     <img
+          src="img/linkedin_2000px.svg.png"
+          alt="View Somesh Singh's profile on LinkedIn" width="32" height="32" style="padding: 5px;" border="0">
+    </a>
 
+    <a href="https://orcid.org/0000-0002-7648-9979" target="_blank">
+     <img
+          src="img/orcid_id_1024px.svg.png"
+          alt="View Somesh Singh's profile on LinkedIn" width="32" height="32" style="padding: 5px;" border="0">
     </a>
 </span>
 
