--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ Indian Institute of Technology Madras</a> under the supervision of
 
     <a href="https://github.com/ssomesh/" target="_blank">
      <img 
-          src="img/github_512px.png"
+          src="img/github.png"
           alt="View Somesh Singh's GitHub Repository" width="32" height="32" style="padding: 5px;" border="0">
     </a>
 
