--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ Indian Institute of Technology Madras</a> under the supervision of
     <a href="https://orcid.org/0000-0002-7648-9979" target="_blank">
      <img
           src="img/orcid_id_1024px.svg.png"
-          alt="View Somesh Singh's profile on LinkedIn" width="32" height="32" style="padding: 5px;" border="0">
+          alt="View Somesh Singh's ORCID record" width="32" height="32" style="padding: 5px;" border="0">
     </a>
 </span>
 
